--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
     "@capacitor/android": "^6.1.2",
     "@capacitor/cli": "^6.1.2",
     "@capacitor/core": "^6.1.2",
+    "@capacitor/preferences": "^6.0.3",
     "@fontsource/noto-sans": "^5.1.0",
     "@mantine/core": "^7.14.3",
     "@mantine/hooks": "^7.14.3",
+    "@types/luxon": "^3.4.2",
+    "luxon": "^3.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.0.2"
+    "react-router": "^7.0.2",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
