--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fontsource/noto-sans": "^5.1.0",
     "@mantine/core": "^7.14.3",
     "@mantine/hooks": "^7.14.3",
+    "@phosphor-icons/react": "^2.1.7",
     "@types/luxon": "^3.4.2",
     "luxon": "^3.5.0",
     "react": "^18.3.1",
